# schematalog

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
reference/: Schematalog.json  openapi.json  openapi_v1.json  schematalog.json
schematalog/: __about__.py  __init__.py  endpoints.py
