[project]
name = "schematalog"
description = "API for cataloging JSON Schema specifications."
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Berislav Lopac", email = "berislav@lopac.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyapi-server[uvicorn]~=0.2",
]
version = "1.0.0"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "pylint",
  "mypy",
]
docs = [
  "mkdocs",
  "mkapi",
  "mkdocs-material",
  "pymdown-extensions",
  "jinja2 < 3.1.0",
]

[project.urls]
Documentation = "https://github.com/berislavlopac/schematalog#readme"
Issues = "https://github.com/berislavlopac/schematalog/issues"
Source = "https://github.com/berislavlopac/schematalog"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
